feat: Neon veritabanı entegrasyonu ve uygulama adını güncelleme

--- a/.env
+++ b/.env
@@ -1,3 +1,33 @@
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://neondb_owner:npg_WVZwdcD4t8QL@ep-small-salad-a2joj5x2-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require"
 JWT_SECRET="changeme_replace_in_production"
-NEXT_PUBLIC_APP_NAME="PadelMaster"
+NEXT_PUBLIC_APP_NAME="Padel App"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="your-secret-key"
+
+# Recommended for most uses
+DATABASE_URL=postgresql://neondb_owner:npg_WVZwdcD4t8QL@ep-small-salad-a2joj5x2-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require
+
+# For uses requiring a connection without pgbouncer
+DATABASE_URL_UNPOOLED=postgresql://neondb_owner:npg_WVZwdcD4t8QL@ep-small-salad-a2joj5x2.eu-central-1.aws.neon.tech/neondb?sslmode=require
+
+# Parameters for constructing your own connection string
+PGHOST=ep-small-salad-a2joj5x2-pooler.eu-central-1.aws.neon.tech
+PGHOST_UNPOOLED=ep-small-salad-a2joj5x2.eu-central-1.aws.neon.tech
+PGUSER=neondb_owner
+PGDATABASE=neondb
+PGPASSWORD=npg_WVZwdcD4t8QL
+
+# Parameters for Vercel Postgres Templates
+POSTGRES_URL=postgresql://neondb_owner:npg_WVZwdcD4t8QL@ep-small-salad-a2joj5x2-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_URL_NON_POOLING=postgresql://neondb_owner:npg_WVZwdcD4t8QL@ep-small-salad-a2joj5x2.eu-central-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_USER=neondb_owner
+POSTGRES_HOST=ep-small-salad-a2joj5x2-pooler.eu-central-1.aws.neon.tech
+POSTGRES_PASSWORD=npg_WVZwdcD4t8QL
+POSTGRES_DATABASE=neondb
+POSTGRES_URL_NO_SSL=postgresql://neondb_owner:npg_WVZwdcD4t8QL@ep-small-salad-a2joj5x2-pooler.eu-central-1.aws.neon.tech/neondb
+POSTGRES_PRISMA_URL=postgresql://neondb_owner:npg_WVZwdcD4t8QL@ep-small-salad-a2joj5x2-pooler.eu-central-1.aws.neon.tech/neondb?connect_timeout=15&sslmode=require
+
+# Neon Auth environment variables for Next.js
+NEXT_PUBLIC_STACK_PROJECT_ID=e2ed22a0-75b2-45c1-b53b-a1aaf2ff6416
+NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=pck_rgv6v3204wmq5ac9a5h3svrxvsx0x6yjfztqmv8dkxjh0
+STACK_SECRET_SERVER_KEY=ssk_1rt0w3kw7hd88pk4mkaj2em6knfg0z3qackhsq9q9yf2r
