--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "padelmaster",
+  "name": "padel-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,23 +11,24 @@
     "prisma:push": "prisma db push"
   },
   "dependencies": {
-    "next": "13.5.11",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "@prisma/client": "5.0.0",
     "bcrypt": "5.1.0",
     "jsonwebtoken": "9.0.0",
-    "next-auth": "4.22.1"
+    "next": "13.5.11",
+    "next-auth": "4.22.1",
+    "pg": "^8.16.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "prisma": "5.0.0",
-    "typescript": "5.2.2",
-    "tailwindcss": "3.4.0",
-    "postcss": "8.4.0",
-    "autoprefixer": "10.4.0",
     "@types/node": "20.5.1",
     "@types/react": "18.2.28",
+    "autoprefixer": "10.4.0",
     "eslint": "8.43.0",
-    "eslint-config-next": "13.5.11"
+    "eslint-config-next": "13.5.11",
+    "postcss": "8.4.0",
+    "prisma": "5.0.0",
+    "tailwindcss": "3.4.0",
+    "typescript": "5.2.2"
   }
 }
