--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "20.5.1",
     "@types/react": "18.2.28",
     "autoprefixer": "10.4.0",
